Salesforce/Salesforce Fundamental/src/objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <formula>(TODAY() -  DOB__c)/360</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <referenceTo>Class__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Married__c</fullName>
        <label>Married</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sex__c</fullName>
        <label>Sex</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Wife_Name__c</fullName>
        <label>Wife Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Date_Of_Birth</fullName>
        <active>true</active>
        <errorConditionFormula>DOB__c &gt;= TODAY()</errorConditionFormula>
        <errorDisplayField>DOB__c</errorDisplayField>
        <errorMessage>Date of Birth Should valid date</errorMessage>
    </validationRules>
</CustomObject>